# chat-database-project

./: .gitignore  CMakeLists.txt
AvatarEditorWidget/include/: AvatarEditor.h  Defines.h  GraphicsItem.h  GraphicsView.h
AvatarEditorWidget/source/: AvatarEditor.cpp  GraphicsItem.cpp  GraphicsView.cpp
include/: AbstractFriendWidget.h  ChatCreationFriendWidget.h  ChatDialog.h  ChatForm.h  ChatMemberWidget.h  ChatWidget.h  ClickableLabel.h  CustomPlainTextEdit.h  DatabaseChooserDialog.h  Defines.h  DeleteDatabaseMessagebox.h  FriendWidget.h  IncomingRequestWidget.h  MainWindow.h  MessageTextEdit.h  OutcomingRequestWidget.h  SearchPeopleWidget.h  SqlInterface.h  SystemMessageWidget.h  UserInfo.h  UserMessageForm.h  UserMessageWidget.h  sqlFunctions.h
resources/: image.qrc
resources/CSS/: MainTheme.qss
source/: Authentication.cpp  ChatDialog.cpp  ChatForm.cpp  ClickableLabel.cpp  CustomPlainTextEdit.cpp  MainWindow.cpp  SqlInterface.cpp  SqlInterface.h  UserInfo.cpp  UserMessageForm.cpp  UserMessageForm.h.cpp  main.cpp  sqlFunctions.cpp
source/Core/: Authentication.cpp  Chats.cpp  DatabaseAdminAccess.cpp  Friends.cpp  GroupChatInfo.cpp  Profile.cpp  Settings.cpp  SqlInterface.cpp  main.cpp
source/Widgets/: ChatCreationFriendWidget.cpp  ChatDialog.cpp  ChatMemberWidget.cpp  ChatWidget.cpp  ClickableLabel.cpp  CustomPlainTextEdit.cpp  DatabaseChooserDialog.cpp  DeleteDatabaseMessagebox.cpp  FriendWidget.cpp  IncomingRequestWidget.cpp  MainWindow.cpp  MessageTextEdit.cpp  OutcomingRequestWidget.cpp  SearchPeopleWidget.cpp  SystemMessageWidget.cpp  UserInfo.cpp  UserMessageWidget.cpp
ui/: avatareditor.ui  chatcreationfriendwidget.ui  chatdialog.ui  chatform.ui  chatmemberwidget.ui  databasechooserdialog.ui  deletedatabasemessagebox.ui  friendwidget.ui  incomingrequestwidget.ui  mainwindow.ui  outcomingrequestwidget.ui  searchpeoplewidget.ui  systemmessageform.ui  usermessageform.ui
